--- a/HewGame/HewGame/HewGame.vcxproj.filters
+++ b/HewGame/HewGame/HewGame.vcxproj.filters
@@ -60,7 +60,7 @@
     <ClInclude Include="Scene_Gimmick.h">
       <Filter>Scene</Filter>
     </ClInclude>
-    <ClInclude Include="thon.h">
+    <ClInclude Include="Thon.h">
       <Filter>Component</Filter>
     </ClInclude>
   </ItemGroup>
@@ -73,6 +73,9 @@
     </ClCompile>
     <ClCompile Include="Permeation.cpp">
       <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="Thon.cpp">
+      <Filter>Component</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
