--- a/HewGame/HewGame/HewGame.vcxproj
+++ b/HewGame/HewGame/HewGame.vcxproj
@@ -144,9 +144,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Bounce.h" />
+    <ClInclude Include="BreakScaffold.h" />
+    <ClInclude Include="Fog.h" />
     <ClInclude Include="LowGravity.h" />
     <ClInclude Include="MovePlayer.h" />
     <ClInclude Include="Permeation.h" />
+    <ClInclude Include="Rock.h" />
     <ClInclude Include="Scene_Gimmick.h" />
     <ClInclude Include="Scene_ProtoType.h" />
     <ClInclude Include="Sample_Animation.h" />
@@ -159,8 +162,11 @@
     <ClInclude Include="TitleScene.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BreakScaffold.cpp" />
+    <ClCompile Include="Fog.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Permeation.cpp" />
+    <ClCompile Include="Rock.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
