--- a/HewGame/HewGame/HewGame.vcxproj.filters
+++ b/HewGame/HewGame/HewGame.vcxproj.filters
@@ -19,6 +19,21 @@
     <Filter Include="Component">
       <UniqueIdentifier>{f20e245c-32fc-4897-ac05-f0e3bb2d3d07}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Component\GimmickObj">
+      <UniqueIdentifier>{6b5ad95c-84c7-479d-82f7-1d97babc015e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Component\GimmickObj\Thon">
+      <UniqueIdentifier>{2298fcb8-31e3-42aa-a6f1-1621c0f59277}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Component\GimmickObj\Rock">
+      <UniqueIdentifier>{3ab88aa1-c31c-44f5-a0ae-5b835ac7b6a3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Component\GimmickObj\BreakScaffold">
+      <UniqueIdentifier>{c7a4b55a-48c8-4539-bf0f-c3728ee6308c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Component\GimmickObj\Fog">
+      <UniqueIdentifier>{33095a37-c1b3-4f7d-a204-1a24185ad0da}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sample_Box2D.h">
@@ -61,7 +76,16 @@
       <Filter>Scene</Filter>
     </ClInclude>
     <ClInclude Include="Thon.h">
-      <Filter>Component</Filter>
+      <Filter>Component\GimmickObj\Thon</Filter>
+    </ClInclude>
+    <ClInclude Include="Rock.h">
+      <Filter>Component\GimmickObj\Rock</Filter>
+    </ClInclude>
+    <ClInclude Include="Fog.h">
+      <Filter>Component\GimmickObj\Fog</Filter>
+    </ClInclude>
+    <ClInclude Include="BreakScaffold.h">
+      <Filter>Component\GimmickObj\BreakScaffold</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -75,7 +99,16 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="Thon.cpp">
-      <Filter>Component</Filter>
+      <Filter>Component\GimmickObj\Thon</Filter>
+    </ClCompile>
+    <ClCompile Include="Rock.cpp">
+      <Filter>Component\GimmickObj\Rock</Filter>
+    </ClCompile>
+    <ClCompile Include="Fog.cpp">
+      <Filter>Component\GimmickObj\Fog</Filter>
+    </ClCompile>
+    <ClCompile Include="BreakScaffold.cpp">
+      <Filter>Component\GimmickObj\BreakScaffold</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
